@@ -4,6 +4,7 @@ uoproxy (0.2.1) unstable; urgency=low
   * fix typo in log message
   * support the "Gump Packed" packet (0xdd)
   * return PA_DROP instead of PA_DELETED after attach
+  * don't re-query the login server for attaching secondary client
 
  --
 
